Fixes #10: UI Bug on Safari

--- a/css/suchedule.css
+++ b/css/suchedule.css
@@ -13,6 +13,11 @@ body {
     grid-template-columns: auto 1fr;
     font-family: 'Roboto', sans-serif;
 }
+@media only screen and (max-width: 500px) {
+    body {
+        grid-template-columns: 4fr 1fr;
+    }
+}
 
 body.hide-menu {
     grid-template-columns: 0 1fr;
@@ -33,18 +38,18 @@ header {
     font-weight: bold;
     margin-right: auto;
 }
+@media only screen and (max-width: 500px) {
+    #logo {
+        font-size: 25px;
+    }
+}
 
 header .button {
     font-size: 18px;
     white-space: nowrap;
     margin-left: 10px;
 }
-
 @media only screen and (max-width: 500px) {
-    #logo {
-        font-size: 25px;
-    }
-
     header .button {
         font-size: 14px;
     }
@@ -59,23 +64,28 @@ header .button {
     position: relative;
     padding: 10px 10px 0 10px;
 }
-
-#menu > div:not(:last-child) {
-    margin-bottom: 10px;
-}
-
 #menu ::-webkit-scrollbar {
     width: 15px;
     opacity: 0;
 }
-
 #menu ::-webkit-scrollbar-track {
     border-radius: 15px;
 }
-
 #menu ::-webkit-scrollbar-thumb {
     border-radius: 15px;
     background: rgba(206, 206, 206, 0.69);
+}
+@media only screen and (max-width: 500px) {
+    #menu {
+        width: 80vw;
+    }
+}
+
+.menu-item {
+    display: flex;
+}
+.menu-item:not(:last-child) {
+    margin-bottom: 10px;
 }
 
 .hide-menu #menu {
@@ -97,10 +107,6 @@ header .button {
     opacity: 0.7;
 }
 
-#input-container {
-    display: flex;
-}
-
 #search-box {
     min-width: 0;
     flex: 1;
@@ -114,33 +120,26 @@ header .button {
     direction: rtl;
 }
 
-#search-filter {
+#search-category {
     padding-left: 0.4rem;
     font-size: 15px;
     font-family: inherit;
     color: white;
-    background-color: #4183c4;
+    background: #4183c4 none;
     border: none;
     cursor: pointer;
+    border-radius: 0;
+    box-shadow: none;
 }
-
-#search-filter option {
+#search-category option {
     background-color: white;
     color: black;
 }
 
-#filter-container {
-    color: white;
-}
-
-#filter-menu {
+#day-filter {
     display: flex;
     align-items: center;
-}
-
-.filter-selections {
-    display: flex;
-    flex: 1;
+    color: white;
 }
 
 #day-filter-selections {
@@ -148,32 +147,26 @@ header .button {
     justify-content: flex-end;
 }
 
-#day-filter {
+#day-filter-label {
+    flex: 1;
     user-select: none;
 }
-
-#day-filter::after {
+#day-filter-label::after {
     content: "Filter By Day";
 }
-
 @media only screen and (max-width: 440px) {
-    #day-filter::after {
+    #day-filter-label::after {
         content: "Day";
     }
 }
-
-@media only screen and (max-width: 360px) {
-    #day-filter::after {
+@media only screen and (max-width: 366px) {
+    #day-filter-label::after {
         content: "";
     }
 }
 
 input[id*=day-filter-] {
     display: none;
-}
-
-input[id*=day-filter-] + label:not(:first-of-type) {
-    margin-left: 0.6rem;
 }
 
 input[id*=day-filter-] + label {
@@ -185,7 +178,9 @@ input[id*=day-filter-] + label {
     box-shadow: inset 0 -3px #4183c4;
     transition: 0.18s cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+input[id*=day-filter-] + label:not(:first-of-type) {
+    margin-left: 0.6rem;
+}
 input[id*=day-filter-]:checked + label {
     box-shadow: inset 0 -30px #4183c4;
 }
@@ -430,16 +425,6 @@ input[id*=day-filter-]:checked + label {
 .display-mode #search-box {
     pointer-events: none;
     background-color: dimgray;
-}
-
-@media only screen and (max-width: 500px) {
-    body {
-        grid-template-columns: 4fr 1fr;
-    }
-
-    #menu {
-        width: 80vw;
-    }
 }
 
 #main-content {
